# prodblock

./: .gitignore  README.md
extension/: content-script.js  manifest.json  popup.html  popup.js  service-worker.js
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: lib.rs  main.rs
