[package]
name = "prodblock"
version = "0.1.0"
description = "Focus app - block distractions during activities"
authors = ["you"]
edition = "2021"

[lib]
name = "prodblock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
winreg = "0.52"
tungstenite = "0.21"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_Networking_WinInet",
] }

# ============================================================================
# BUILD OPTIMIZATION PROFILES
# ============================================================================

[profile.dev]
incremental = true       # Enable incremental compilation
opt-level = 0            # No optimization for faster compiles
codegen-units = 256      # More parallel compilation units
split-debuginfo = "unpacked"  # Faster linking on Windows

[profile.dev.package."*"]
opt-level = 1            # Slight optimization for dependencies (faster runtime)

[profile.release]
lto = "thin"             # Faster than fat LTO, still good size reduction
codegen-units = 1        # Better optimization for release
strip = true             # Strip symbols for smaller binary
